--- a/index.html
+++ b/index.html
@@ -1,18 +1,28 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>tao_main_site_vue</title>
-    <link rel="stylesheet" href="./src/assets/plugins/mi_mui/mui.min.css">
-    <link rel="stylesheet" href="./src/assets/css/iconfont_m.css">
-    <link rel="stylesheet" href="./src/assets/css/common.css">
-    
-    <script src="./src/assets/plugins/jquery/jquery.min.js"></script>
-    <script src="./src/assets/plugins/mi_mui/mui.min.js"></script>
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="format-detection" content="telephone=no">
+
+  <title>tao_main_site_vue</title>
+  <link rel="stylesheet" href="./src/assets/plugins/mi_mui/mui.min.css">
+  <link rel="stylesheet" href="./src/assets/css/iconfont_m.css">
+  <link rel="stylesheet" href="./src/assets/css/common.css">
+
+
+  <script src="./src/assets/plugins/jquery/jquery.min.js"></script>
+  <script src="./src/assets/plugins/mi_mui/mui.min.js"></script>
+</head>
+
+<body>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+</body>
+
 </html>
