--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="format-detection" content="telephone=no">
 
-  <title>tao_main_site_vue</title>
+  <title>淘亿批发</title>
   <link rel="stylesheet" href="./src/assets/plugins/mi_mui/mui.min.css">
   <link rel="stylesheet" href="./src/assets/css/iconfont_m.css">
   <link rel="stylesheet" href="./src/assets/css/common.css">
